common/force-app/main/default/objects/Founder_Campaign__c/Founder_Campaign__c.object-meta.xml
<CustomObject>
    <label>Founder Campaign</label>
    <nameField>
        <label>Founder Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Founder Campaigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>