common/force-app/main/default/objects/Founder_Campaign__c/fields/Application_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Close_Date__c</fullName>
    <inlineHelpText>This is the date and time from when we will not accept any further applications.</inlineHelpText>
    <label>Application Close Date</label>
    <type>DateTime</type>
</CustomField>