common/force-app/main/default/objects/Founder_Campaign__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <description>You should select the business account related to the campaign in order to pull the person account related to it as well.</description>
    <inlineHelpText>You should select the business account related to the campaign in order to pull the person account related to it as well.</inlineHelpText>
    <label>Business Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Founder Campaigns</relationshipLabel>
    <relationshipName>Founder_Campaigns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>