common/force-app/main/default/objects/Founder_Campaign__c/fields/Campaign_Owner__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Founder_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>