common/force-app/main/default/objects/Founder_Campaign__c/fields/Campaign_Stage__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Stage__c</fullName>
    <label>Campaign Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Mkt Assets</fullName>
            </value>
            <value>
                <fullName>EOI Build</fullName>
            </value>
            <value>
                <fullName>Raise Build</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Campaign Closed</fullName>
            </value>
            <value>
                <fullName>Application Follow-Up</fullName>
                <isActive>false</isActive>
                <label>Application Follow-Up</label>
            </value>
            <value>
                <fullName>EOI Live</fullName>
                <isActive>false</isActive>
                <label>EOI Live</label>
            </value>
            <value>
                <fullName>Lead Conversion</fullName>
                <isActive>false</isActive>
                <label>Lead Conversion</label>
            </value>
            <value>
                <fullName>Opp Conversion</fullName>
                <isActive>false</isActive>
                <label>Opp Conversion</label>
            </value>
            <value>
                <fullName>Raise Live</fullName>
                <isActive>false</isActive>
                <label>Raise Live</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>