common/force-app/main/default/objects/Founder_Campaign__c/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pro_Wholesale</fullName>
                <label>Pro Wholesale</label>
            </value>
            <value>
                <fullName>Pro_Retail</fullName>
                <label>Pro Retail</label>
            </value>
            <value>
                <fullName>Friends &amp; Family</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Premium Wholesale</fullName>
                <default>true</default>
                <label>Premium Wholesale</label>
            </value>
            <value>
                <fullName>Premium Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>