common/force-app/main/default/objects/Founder_Campaign__c/fields/EOI_End_Date__c.field-meta.xml
<CustomField>
    <fullName>EOI_End_Date__c</fullName>
    <formula>Related_EOI__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EOI End Date</label>
    <type>Date</type>
</CustomField>