common/force-app/main/default/objects/Founder_Campaign__c/fields/EOI_Mkt_Campaign_End_Date__c.field-meta.xml
<CustomField>
    <fullName>EOI_Mkt_Campaign_End_Date__c</fullName>
    <label>EOI Mkt Campaign End Date</label>
    <type>Date</type>
</CustomField>