common/force-app/main/default/objects/Founder_Campaign__c/fields/EOI_Number_of_Leads__c.field-meta.xml
<CustomField>
    <fullName>EOI_Number_of_Leads__c</fullName>
    <formula>Related_EOI__r.Leads_expressed_interest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EOI Number of Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>