common/force-app/main/default/objects/Founder_Campaign__c/fields/EOI_Status__c.field-meta.xml
<CustomField>
    <fullName>EOI_Status__c</fullName>
    <formula>Text(Related_EOI__r.EOI_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EOI Status</label>
    <type>Text</type>
</CustomField>