common/force-app/main/default/objects/Founder_Campaign__c/fields/EOI_Sum_of_Leads__c.field-meta.xml
<CustomField>
    <fullName>EOI_Sum_of_Leads__c</fullName>
    <formula>Related_EOI__r.Value_of_investment_interest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EOI Sum of Leads $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>