common/force-app/main/default/objects/Founder_Campaign__c/fields/EOI_Target_Raise_Amount__c.field-meta.xml
<CustomField>
    <fullName>EOI_Target_Raise_Amount__c</fullName>
    <formula>Related_EOI__r.Target_Raise_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EOI Target Raise Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>