common/force-app/main/default/objects/Founder_Campaign__c/fields/Marketing_Partner__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Founder Campaigns (Marketing Partner)</relationshipLabel>
    <relationshipName>Founder_Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>