common/force-app/main/default/objects/Founder_Campaign__c/fields/Next_Step_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date_Time__c</fullName>
    <label>Next Step Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>