common/force-app/main/default/objects/Founder_Campaign__c/fields/Next_Step_Date_Validation__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date_Validation__c</fullName>
    <formula>IF(
    ISPICKVAL(Campaign_Stage__c, &quot;Campaign Closed&quot;),
    &quot;🔵 Closed Campaign&quot;,
    IF(
        ISBLANK( Next_Step_Date_Time__c ),
        &quot;☢️ No Steps&quot;,
        IF(
            Next_Step_Date_Time__c &lt;= NOW(),
            &quot;🔴 Outdated Step&quot;,
            &quot;🟢 Step on time&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Step Date Validation</label>
    <type>Text</type>
</CustomField>