common/force-app/main/default/objects/Founder_Campaign__c/fields/of_Leads_Contacted__c.field-meta.xml
<CustomField>
    <fullName>of_Leads_Contacted__c</fullName>
    <label>% of Leads Contacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>