common/force-app/main/default/objects/Founder_Campaign__c/fields/PR_Company__c.field-meta.xml
<CustomField>
    <fullName>PR_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PR Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Founder Campaigns (PR Company)</relationshipLabel>
    <relationshipName>Founder_Campaigns2</relationshipName>
    <type>Lookup</type>
</CustomField>