common/force-app/main/default/objects/Founder_Campaign__c/fields/Raise_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Raise_Launch_Date__c</fullName>
    <formula>Related_Raise__r.Form_Offer_launch_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Raise Launch Date</label>
    <type>Date</type>
</CustomField>