common/force-app/main/default/objects/Founder_Campaign__c/fields/RAISE_Mkt_Campaign_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>RAISE_Mkt_Campaign_Launch_Date__c</fullName>
    <label>RAISE Mkt Campaign Launch Date</label>
    <type>Date</type>
</CustomField>