common/force-app/main/default/objects/Founder_Campaign__c/fields/Raise_Opp_Value__c.field-meta.xml
<CustomField>
    <fullName>Raise_Opp_Value__c</fullName>
    <formula>Related_Raise__r.Value_of_Applications__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Raise Opp Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>