common/force-app/main/default/objects/Founder_Campaign__c/fields/Raise_Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Raise_Opportunity_Count__c</fullName>
    <formula>Related_Raise__r.Applications_Created__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Raise Opportunity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>