common/force-app/main/default/objects/Founder_Campaign__c/fields/Raise_Status__c.field-meta.xml
<CustomField>
    <fullName>Raise_Status__c</fullName>
    <formula>text(Related_Raise__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Raise Status</label>
    <type>Text</type>
</CustomField>