common/force-app/main/default/objects/Founder_Campaign__c/fields/Raise_Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>Raise_Target_Amount__c</fullName>
    <formula>Related_Raise__r.Form_Target_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Raise Target Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>