common/force-app/main/default/objects/Founder_Campaign__c/fields/Related_EOI__c.field-meta.xml
<CustomField>
    <fullName>Related_EOI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related EOI</label>
    <referenceTo>EOI__c</referenceTo>
    <relationshipLabel>Founder Campaigns</relationshipLabel>
    <relationshipName>Founder_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>