common/force-app/main/default/objects/Founder_Campaign__c/fields/Related_Raise__c.field-meta.xml
<CustomField>
    <fullName>Related_Raise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Raise</label>
    <referenceTo>Raise__c</referenceTo>
    <relationshipLabel>Founder Campaigns</relationshipLabel>
    <relationshipName>Founder_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>