common/force-app/main/default/objects/Founder_Campaign__c/fields/Status_In_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Status_In_Pipeline__c</fullName>
    <formula>Status_In_Progress__c + Status_New__c + Status_Unqualified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status In Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>