common/force-app/main/default/objects/Founder_Campaign__c/fields/Status_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Status_In_Progress__c</fullName>
    <label>Status In Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>