common/force-app/main/default/objects/Founder_Campaign__c/fields/Status_Lost__c.field-meta.xml
<CustomField>
    <fullName>Status_Lost__c</fullName>
    <label>Status Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>