common/force-app/main/default/objects/Founder_Campaign__c/fields/Status_Lost_Sum__c.field-meta.xml
<CustomField>
    <fullName>Status_Lost_Sum__c</fullName>
    <label>Status Lost Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>