common/force-app/main/default/objects/Founder_Campaign__c/fields/Status_Pipeline_Sum__c.field-meta.xml
<CustomField>
    <fullName>Status_Pipeline_Sum__c</fullName>
    <formula>Status_In_Progress_Sum__c + Status_New_Sum__c + Status_Unqualified_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Pipeline Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>