common/force-app/main/default/objects/Founder_Campaign__c/fields/Status_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Status_Unqualified__c</fullName>
    <label>Status Unqualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>