common/force-app/main/default/objects/Founder_Campaign__c/fields/True_Amount_to_Raise__c.field-meta.xml
<CustomField>
    <fullName>True_Amount_to_Raise__c</fullName>
    <label>True Amount to Raise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>