common/force-app/main/default/objects/Founder_Campaign__c/fields/Webinar_URL__c.field-meta.xml
<CustomField>
    <fullName>Webinar_URL__c</fullName>
    <label>Webinar URL</label>
    <type>Url</type>
</CustomField>