common/force-app/main/default/objects/Founder_Campaign__c/recordTypes/Founder_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Founder_Campaign</fullName>
    <active>true</active>
    <label>Founder Campaign</label>
</RecordType>